Fix InternMatch logo cutting off in mobile

--- a/themes/internmatch/account/resources/css/account.css
+++ b/themes/internmatch/account/resources/css/account.css
@@ -767,7 +767,8 @@ html {
 
 .project-logo {
   background-image: url("../img/logo.png");
-  background-size: cover;
+  background-size: "contain";
+  background-repeat: "no-repeat";
   background-position: center;
   width: 240px;
   height: 40px;
